# agentic-ai-tasks

./: README.md
00_swarm/: README.md  main.py
01_uv/exploring-uv/: README.md  pyproject.toml
01_uv/exploring-uv/src/exploring_uv/: __init__.py  main.py
02_openrouter/: README.md  main.py
03_litellm_openai_agent/: README.md  main.py
04_hello_agent/: README.md  main.py  pyproject.toml
Chatbot-Online-assistant-/: README.md  app.py  main.py  pyproject.toml  requirements.txt
Chatbot-Online-assistant-/customer_support_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
