[project]
name = "exploring-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Career01Crafter", email = "pakistani47log@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
exploring-uv = "exploring_uv:main"
main = "exploring_uv.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
